# news_platform_task

./: manage.py  pyproject.toml
news/: admin.py  forms.py  models.py  urls.py  views.py
news/migrations/: 0001_initial.py  0002_auto_20191224_1350.py  0003_news_status.py  0004_auto_20200123_1641.py  0005_auto_20200203_1826.py
news/templates/news/: home.html  news_detail.html
news/templates/news/includes/: news_card.html
news/test/: test_forms.py  test_views.py
planeks_test_task/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html  header.html
users/: forms.py  managers.py  models.py  sendgridAPI.py  tokens.py  urls.py  views.py
users/management/commands/: create_default_groups.py
users/migrations/: 0001_initial.py  0002_auto_20191221_1644.py  0003_auto_20191221_2011.py  0004_auto_20191222_1249.py  0005_auto_20191222_1323.py  0006_auto_20191222_1342.py  0007_auto_20200125_1255.py  0008_auto_20200126_1016.py  0009_auto_20200128_2153.py  0010_auto_20200203_1826.py
users/templates/users/: activation_request.html  login.html
